oops, forgot to check in

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Manage/Services.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Manage/Services.cshtml
@@ -41,7 +41,7 @@
                             <label class="govuk-label govuk-visually-hidden" for="service-name">
                                 Search by service name
                             </label>
-                                <input id="service-name" name="serviceNameSearch" class="govuk-input govuk-input--width-20" type="text">
+                                <input id="service-name" name="serviceNameSearch" class="govuk-input govuk-input--width-20" type="text" value="@Model.CurrentServiceNameSearch">
                         </fieldset>
                     </div>
 
