--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/Locations/Pages/_locationsFilter.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/Locations/Pages/_locationsFilter.cshtml
@@ -17,8 +17,7 @@
                         <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
                             <h3 class="govuk-fieldset__heading">Location name</h3>
                         </legend>
-                        @* todo: target width-20 doesn't exists - will be flagged during accessibility testing*@
-                        <label class="govuk-label govuk-visually-hidden" for="width-20">
+                        <label class="govuk-label govuk-visually-hidden" for="SearchName">
                             Search by location name
                         </label>
                         <input class="govuk-input govuk-input--width-20" id="SearchName" asp-for="SearchName" type="text" title="Location Name">
