--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Manage/Services.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Manage/Services.cshtml
@@ -30,7 +30,7 @@
                 <div class="moj-filter__selected">
 
                     <div class="moj-filter__heading-title">
-                        <h2 class="govuk-heading-m">Filter results</h2>
+                        <h2 class="govuk-heading-m">Filter services</h2>
                     </div>
 
                     <div class="govuk-form-group fh-filter-group app-filter-group">
