--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Manage/Services.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Manage/Services.cshtml
@@ -68,8 +68,7 @@
 
             @if (Model.FilterApplied)
             {
-                <p>Try again by changing or removing filters you applied.</p>
-
+                <p>Try again by searching for another service.</p>
             }
         }
     </div>
