--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Manage/Services.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Manage/Services.cshtml
@@ -46,10 +46,10 @@
                     </div>
 
                     <button type="submit" class="govuk-button" data-module="govuk-button" data-prevent-double-click="true">
-                        Apply filters
+                        Apply filter
                     </button>
 
-                        <p><button type="submit" class="fh-button-link govuk-!-font-size-16" name="clearFilter" value="true">Clear filters</button></p>
+                    <p><button type="submit" class="fh-button-link govuk-!-font-size-16" name="clearFilter" value="true">Clear filter</button></p>
                 </div>
             </div>
         </form>
