--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Manage/Services.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Manage/Services.cshtml
@@ -17,8 +17,8 @@
     </div>
 </div>
 
-<open-close-button target="filters" hide-text="Hide filters" start-hidden>
-    Show filters
+<open-close-button target="filters" hide-text="Hide filter" start-hidden>
+    Show filter
 </open-close-button>
 
 <div class="govuk-grid-row">
