fix label, add space between header and content

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/Locations/Pages/_locationsFilter.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/Locations/Pages/_locationsFilter.cshtml
@@ -33,7 +33,7 @@
                     <div class="govuk-form-group">
                         <fieldset class="govuk-fieldset">
                             <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
-                                <h3 class="govuk-fieldset__heading">Type of user</h3>
+                                <h3 class="govuk-fieldset__heading">Location type</h3>
                             </legend>
                             <div class="govuk-checkboxes govuk-checkboxes--small" data-module="govuk-checkboxes">
                                 <div class="govuk-checkboxes__item">
