--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/Locations/Pages/ManageLocations.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/Locations/Pages/ManageLocations.cshtml
@@ -15,6 +15,8 @@
     </div>
 </div>
 
+<hr class="govuk-section-break govuk-section-break--visible govuk-section-break--l">
+
 <form method="post">
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-one-quarter">
