move upload spreadsheet out of its area & delete the area

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Welcome.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Welcome.cshtml
@@ -39,7 +39,7 @@
                     <div class="cards">
                         <div class="card">
                             <h3 class="govuk-heading-s">
-                                <a asp-page-handler="UploadSpreadsheetData" asp-route-organisationid="@Model.OrganisationViewModel.Id" data-module="govuk-button" data-testid="upload-spreadsheet">
+                                <a asp-page="UploadSpreadsheetData" asp-route-organisationid="@Model.OrganisationViewModel.Id" data-module="govuk-button" data-testid="upload-spreadsheet">
                                     Upload Excel Spreadsheet
                                 </a>
                             </h3>
