--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_MenuSection.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_MenuSection.cshtml
@@ -1,5 +1,3 @@
 ﻿@model string
 
-<hr class="govuk-section-break govuk-section-break--visible govuk-section-break--l">
-
-<h2 class="govuk-heading-m govuk-!-margin-bottom-6">@Model</h2>
+<h2 class="govuk-heading-m govuk-!-margin-top-8">@Model</h2>
