update ulr to /manage-locatgions

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-locations/Index.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-locations/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model FamilyHubs.ServiceDirectory.Admin.Web.Areas.Locations.Pages.ManageLocationsModel
+@model FamilyHubs.ServiceDirectory.Admin.Web.Pages.manage_locations.ManageLocationsModel
 @{
     ViewData["Title"] = Model.Title;
 }
