--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-locations/_locationsFilter.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-locations/_locationsFilter.cshtml
@@ -1,4 +1,4 @@
-﻿@model FamilyHubs.ServiceDirectory.Admin.Web.Areas.Locations.Pages.ManageLocationsModel
+﻿@model FamilyHubs.ServiceDirectory.Admin.Web.Pages.manage_locations.ManageLocationsModel
 
 
 <open-close-button target="filters-component" hide-text="Hide filters" start-hidden>
