--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/AgreeToTermsAndConditions.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/AgreeToTermsAndConditions.cshtml
@@ -12,10 +12,10 @@
 
             <h1 class="govuk-heading-l">Agree to our terms of use</h1>
 
-            <p>By continuing, you confirm that you agree to Manage family support services and accounts:</p>
+            <p>By continuing, you confirm that you agree to our:</p>
             <ul class="govuk-list govuk-list--bullet">
-                <li><a asp-page="/Privacy" class="govuk-link" rel="noreferrer noopener" target="_blank">privacy notice (opens in new tab)</a>, which explains how we use your personal information</li>
-                <li><a asp-page="/Terms-and-conditions/Index" class="govuk-link" rel="noreferrer noopener" target="_blank">terms and conditions (opens in new tab)</a></li>
+                <li><a asp-page="/Privacy" new-tab>privacy notice</a>, which explains how we use your personal information</li>
+                <li><a asp-page="/Terms-and-conditions/Index" new-tab>terms and conditions</a></li>
             </ul>
 
             <form method="post">
