update privacy notice

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Privacy.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Privacy.cshtml
@@ -12,9 +12,11 @@
     <div class="govuk-grid-column-two-thirds">
 
         <h1 class="govuk-heading-l">Privacy notice</h1>
-        <p>‘Manage family support services and accounts’ is provided by the Department for Education (DfE).</p>
+        <p>Manage family support services and accounts is provided by the Department for Education (DfE).</p>
         <p>The Department for Education is joint data controller with various local authorities for data collected within this service. The local authority that your account is associated with shares data controller responsibility for your account with DfE.</p>
         <p>A data controller determines how and why personal data is processed. For more information, read the <a href="https://ico.org.uk/ESDWebPages/Entry/Z1001723">Department for Education’s entry in the Data Protection Public Register</a>.</p>
+        <h2 class="govuk-heading-m">Authentication with GOV.UK One Login</h2>
+        <p>We use GOV.UK One Login to sign you in to Manage family support services and accounts. GOV.UK One Login is provided by the Cabinet Office, who is an independent data controller. For more information about what data they collect and why, read the <a href="https://signin.account.gov.uk/privacy-notice">GOV.UK One Login privacy notice</a>.</p>
         <h2 class="govuk-heading-m">What data we collect</h2>
         <p>The personal data we collect from you is:</p>
         <ul class="govuk-list govuk-list--bullet">
@@ -31,12 +33,12 @@
             <li>your organisation</li>
             <li>the name of your local authority</li>
         </ul>
-        <p>We use <a href="/cookies/index">cookies</a> to collect information on how you use the site.</p>
+        <p>We use <a href="/cookies">cookies</a> to collect information on how you use the site.</p>
         <p>Where you provide your consent, we use <a href="https://support.google.com/analytics/topic/2919631">Google Analytics</a> cookies. Google Analytics processes information about: </p>
         <ul class="govuk-list govuk-list--bullet">
             <li>your Internet Protocol (IP) address</li>
             <li>your device and location</li>
-            <li>the pages you visit in ‘Manage family support services and accounts’</li>
+            <li>the pages you visit in Manage family support services and accounts</li>
             <li>how long you spend on each page and what you click on</li>
             <li>how you got to the service</li>
         </ul>
@@ -50,7 +52,7 @@
             <li>analyse, monitor and improve the service</li>
         </ul>
         <h2 class="govuk-heading-m">How long we keep this data</h2>
-        <p>We retain your personal data while you are an active user, and then for one year after the last time you use your ‘Manage family support services and accounts’ account.</p>
+        <p>We retain your personal data while you are an active user, and then for one year after the last time you use your account.</p>
         <h2 class="govuk-heading-m">Who we share this data with</h2>
         <p>As part of delivering the DfE services, we share your personal data with the local authority where you work, or where the service you are associated with operates.</p>
         <p>We will not:</p>
@@ -73,22 +75,24 @@
         </ul>
         <p><a href="https://ico.org.uk/for-the-public/">Find out more about your personal data rights</a>.</p>
         <h2 class="govuk-heading-m">Questions and complaints</h2>
-        <p>You can read about <a href="https://www.gov.uk/government/organisations/department-for-education/about/personal-information-charter"> how the DfE handles personal information in the personal information charter</a>.</p>
-        <p>You can contact us by using our <a href="https://form.education.gov.uk/service/Contact_the_Department_for_EducationDfE"> secure contact form</a> if you:</p>
+        <h3 class="govuk-heading-s">Contact your local authority</h3>
+        <p><a href="https://www.gov.uk/find-local-council">Contact your local council</a> to access, update or correct the information they hold on you.</p>
+        <h3 class="govuk-heading-s">Contact the DfE</h3>
+        <p>You can contact us by using our <a href="https://form.education.gov.uk/service/Contact_the_Department_for_Education"> secure contact form</a> if you:</p>
         <ul class="govuk-list govuk-list--bullet">
             <li>have any questions about anything on this page</li>
             <li>think that your personal data has been misused or mishandled</li>
             <li>want to <a href="https://www.gov.uk/government/organisations/department-for-education/about/personal-information-charter#how-to-make-a-subject-access-requestmake"> make a subject access request (SAR)</a></li>
         </ul>
+        <p>Read about <a href="https://www.gov.uk/government/organisations/department-for-education/about/personal-information-charter"> how the DfE handles personal information in the personal information charter</a>.</p>
+        <h3 class="govuk-heading-s">Contact the Data Protection Officer</h3>
         <p>You can also write to the Data Protection Officer, who provides independent advice and monitoring of DfE’s use of personal information:</p>
         <div class="govuk-inset-text">
-            <p>
-                Emma Wharram, Data Protection Officer
-                <br>Department for Education (B2.28)
-                <br>7 and 8 Wellington Place
-                <br>Leeds
-                <br>LS1 4AW
-            </p>
+            Emma Wharram, Data Protection Officer
+            <br>Department for Education (B2.28)
+            <br>7 and 8 Wellington Place
+            <br>Leeds
+            <br>LS1 4AW
         </div>
         <p>If you consider that your personal data has been misused or mishandled, you may make a complaint to the Information Commissioner, who is an independent regulator:</p>
         <div class="govuk-inset-text">
@@ -99,14 +103,15 @@
                 <br>Wilmslow
                 <br>Cheshire
                 <br>SK9 5AF
-            </p><p>
+            <p>
+            <p>
                 Telephone: 0303 123 1113
                 <br>Email: <a href="mailto:icocasework@ico.org.uk">icocasework@ico.org.uk</a>
             </p>
         </div>
         <p>Complaints to the Information Commissioner are without prejudice to your right to seek redress through the courts.</p>
         <h2 class="govuk-heading-m">Changes to this notice</h2>
-        <p>This notice was last updated on 10 July 2023. It will be reviewed on 10 July 2024.</p>
+        <p>This notice was last updated on 30 October 2023. It will be reviewed on 30 October 2024.</p>
         <p>We may change this privacy notice before its review date. When we make changes, we will add a change note at the bottom of this page. Any changes to this privacy notice will apply to you and your data immediately. If these changes affect how your personal data is processed, DfE will take reasonable steps to make sure you know.</p>
         <h2 class="govuk-heading-m">Our legal basis for processing your data</h2>
         <p>The legal basis for processing your data is public task article 6(1)(e) of the General Data Protection Regulation (GDPR).</p>
